// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ghost going down puts label above it 1`] = `
<svg
  style={
    Object {
      "height": 36,
      "width": 27.5,
    }
  }
  viewBox="-13.75 -23.5 27.5 36"
>
  <g
    className="m-vehicle-icon m-vehicle-icon--medium ghost"
  >
    <rect
      className="m-vehicle-icon__label-background"
      height={11}
      rx={5.5}
      ry={5.5}
      width={26}
      x={-13}
      y={-22.5}
    />
    <text
      className="m-vehicle-icon__label"
      dominantBaseline="central"
      textAnchor="middle"
      x="0"
      y={-17}
    >
      ghost
    </text>
    <g
      transform="scale(0.4375) translate(-24,-23)"
    >
      <path
        className="m-vehicle-icon__ghost-highlight"
        d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
        stroke-join="round"
      />
      <path
        className="m-vehicle-icon__ghost-body"
        d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
        stroke-join="round"
      />
      <ellipse
        className="m-vehicle-icon__ghost-eye"
        cx="19.73"
        cy="22.8"
        rx="3.11"
        ry="3.03"
      />
      <ellipse
        className="m-vehicle-icon__ghost-eye"
        cx="35.29"
        cy="22.8"
        rx="3.11"
        ry="3.03"
      />
    </g>
  </g>
</svg>
`;

exports[`ghost with variant doesn't have eyes 1`] = `
<svg
  style={
    Object {
      "height": 25,
      "width": 27.5,
    }
  }
  viewBox="-13.75 -12.5 27.5 25"
>
  <g
    className="m-vehicle-icon m-vehicle-icon--medium ghost"
  >
    <g
      transform="scale(0.4375) translate(-24,-23)"
    >
      <path
        className="m-vehicle-icon__ghost-highlight"
        d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
        stroke-join="round"
      />
      <path
        className="m-vehicle-icon__ghost-body"
        d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
        stroke-join="round"
      />
    </g>
    <text
      className="m-vehicle-icon__variant"
      dominantBaseline="alphabetic"
      textAnchor="middle"
      x={0}
      y={4.5}
    >
      X
    </text>
  </g>
</svg>
`;

exports[`renders a special off-course icon for Halloween 1`] = `
Array [
  "VehicleIcon size=",
  "0",
  " orientation=",
  "0",
  " />",
  <svg
    style={
      Object {
        "height": 16.72,
        "width": 15.2,
      }
    }
    viewBox="-7.6 -8.36 15.2 16.72"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small off-course"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(90) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 15.2,
        "width": 16.72,
      }
    }
    viewBox="-8.36 -7.6 16.72 15.2"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small off-course"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(180) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 16.72,
        "width": 15.2,
      }
    }
    viewBox="-7.6 -8.36 15.2 16.72"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small off-course"
    >
      <path
        d="m33.19 37.76a1.53 1.53 0 0 0 1.11.31 1.48 1.48 0 0 0 1-.58c1.21-1.62 2.54-2.42 3.83-2.41 2.51.06 5 2.94 5.78 4.05a1.5 1.5 0 0 0 1.55.61 1.47 1.47 0 0 0 1.12-1.23c3.27-23.76-13.42-30.31-13.58-30.37a1.47 1.47 0 0 0 -2 1.54c.58 4.94-.09 8.32-2 9.8a3.11 3.11 0 0 1 -.54.35v-5a1.47 1.47 0 1 0 -2.93 0v4.17a4.38 4.38 0 0 0 -4.81 0v-4.2a1.47 1.47 0 1 0 -2.93 0v5.2a3.79 3.79 0 0 1 -.91-.53c-1.87-1.48-2.54-4.86-2-9.8a1.47 1.47 0 0 0 -2-1.54c-.04.07-16.73 6.62-13.45 30.38a1.47 1.47 0 0 0 1.12 1.23 1.5 1.5 0 0 0 1.55-.61c.75-1.11 3.25-4 5.77-4.05 1.35 0 2.63.78 3.84 2.41a1.47 1.47 0 0 0 2.1.27s4.82-2.91 8 1.61a1.43 1.43 0 0 0 2.39-.12c1.33-2.25 3.9-4.65 7.99-1.49z"
        transform="scale(0.38) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium off-course"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 27.5,
        "width": 25,
      }
    }
    viewBox="-12.5 -13.75 25 27.5"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium off-course"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(90) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium off-course"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(180) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 27.5,
        "width": 25,
      }
    }
    viewBox="-12.5 -13.75 25 27.5"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium off-course"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(270) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 40,
        "width": 44,
      }
    }
    viewBox="-22 -20 44 40"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large off-course"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 44,
        "width": 40,
      }
    }
    viewBox="-20 -22 40 44"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large off-course"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(90) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 40,
        "width": 44,
      }
    }
    viewBox="-22 -20 44 40"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large off-course"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(180) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 44,
        "width": 40,
      }
    }
    viewBox="-20 -22 40 44"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large off-course"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(270) translate(-24,-22)"
      />
    </g>
  </svg>,
]
`;

exports[`renders an unwrapped svg node 1`] = `
<svg>
  <g
    className="m-vehicle-icon m-vehicle-icon--medium "
  >
    <rect
      className="m-vehicle-icon__label-background"
      height={11}
      rx={5.5}
      ry={5.5}
      width={26}
      x={-13}
      y={-22.5}
    />
    <text
      className="m-vehicle-icon__label"
      dominantBaseline="central"
      textAnchor="middle"
      x="0"
      y={-17}
    >
      label
    </text>
    <path
      className="m-vehicle-icon__triangle"
      d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
      transform="scale(0.625) rotate(180) translate(-24,-22)"
    />
  </g>
</svg>
`;

exports[`renders in all directions and sizes 1`] = `
Array [
  <svg
    style={
      Object {
        "height": 15.2,
        "width": 16.72,
      }
    }
    viewBox="-8.36 -7.6 16.72 15.2"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 16.72,
        "width": 15.2,
      }
    }
    viewBox="-7.6 -8.36 15.2 16.72"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(90) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 15.2,
        "width": 16.72,
      }
    }
    viewBox="-8.36 -7.6 16.72 15.2"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(180) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 16.72,
        "width": 15.2,
      }
    }
    viewBox="-7.6 -8.36 15.2 16.72"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(270) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 27.5,
        "width": 25,
      }
    }
    viewBox="-12.5 -13.75 25 27.5"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(90) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(180) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 27.5,
        "width": 25,
      }
    }
    viewBox="-12.5 -13.75 25 27.5"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(270) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 40,
        "width": 44,
      }
    }
    viewBox="-22 -20 44 40"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 44,
        "width": 40,
      }
    }
    viewBox="-20 -22 40 44"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(90) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 40,
        "width": 44,
      }
    }
    viewBox="-22 -20 44 40"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(180) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 44,
        "width": 40,
      }
    }
    viewBox="-20 -22 40 44"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(270) translate(-24,-22)"
      />
    </g>
  </svg>,
]
`;

exports[`renders with all statuses 1`] = `
Array [
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium on-time"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium early"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium late"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium off-course"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium ghost"
    >
      <g
        transform="scale(0.4375) translate(-24,-23)"
      >
        <path
          className="m-vehicle-icon__ghost-highlight"
          d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
          stroke-join="round"
        />
        <path
          className="m-vehicle-icon__ghost-body"
          d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
          stroke-join="round"
        />
        <ellipse
          className="m-vehicle-icon__ghost-eye"
          cx="19.73"
          cy="22.8"
          rx="3.11"
          ry="3.03"
        />
        <ellipse
          className="m-vehicle-icon__ghost-eye"
          cx="35.29"
          cy="22.8"
          rx="3.11"
          ry="3.03"
        />
      </g>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
]
`;

exports[`renders with variants and labels 1`] = `
Array [
  <svg
    style={
      Object {
        "height": 26.200000000000003,
        "width": 26,
      }
    }
    viewBox="-13 -7.6 26 26.200000000000003"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={6.6}
      />
      <text
        className="m-vehicle-icon__label"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={12.1}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(0) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="alphabetic"
        textAnchor="middle"
        x={0}
        y={5.6}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 27.72,
        "width": 26,
      }
    }
    viewBox="-13 -8.36 26 27.72"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={7.359999999999999}
      />
      <text
        className="m-vehicle-icon__label"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={12.86}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(90) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="start"
        x={-5.6}
        y={0}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 26.200000000000003,
        "width": 26,
      }
    }
    viewBox="-13 -18.6 26 26.200000000000003"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={-17.6}
      />
      <text
        className="m-vehicle-icon__label"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={-12.100000000000001}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(180) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="hanging"
        textAnchor="middle"
        x={0}
        y={-5.6}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 27.72,
        "width": 26,
      }
    }
    viewBox="-13 -8.36 26 27.72"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={7.359999999999999}
      />
      <text
        className="m-vehicle-icon__label"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={12.86}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(270) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="end"
        x={5.6}
        y={0}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 36,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 36"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={11.5}
      />
      <text
        className="m-vehicle-icon__label"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={17}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="alphabetic"
        textAnchor="middle"
        x={0}
        y={8.5}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 38.5,
        "width": 26,
      }
    }
    viewBox="-13 -13.75 26 38.5"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={12.75}
      />
      <text
        className="m-vehicle-icon__label"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={18.25}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(90) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="start"
        x={-8.5}
        y={0}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 36,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -23.5 27.5 36"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={-22.5}
      />
      <text
        className="m-vehicle-icon__label"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={-17}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(180) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="hanging"
        textAnchor="middle"
        x={0}
        y={-8.5}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 38.5,
        "width": 26,
      }
    }
    viewBox="-13 -13.75 26 38.5"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={12.75}
      />
      <text
        className="m-vehicle-icon__label"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={18.25}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(270) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="end"
        x={8.5}
        y={0}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 64,
        "width": 64,
      }
    }
    viewBox="-32 -20 64 64"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={64}
        x={-32}
        y={19}
      />
      <text
        className="m-vehicle-icon__label"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={31}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(0) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="alphabetic"
        textAnchor="middle"
        x={0}
        y={14}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 68,
        "width": 64,
      }
    }
    viewBox="-32 -22 64 68"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={64}
        x={-32}
        y={21}
      />
      <text
        className="m-vehicle-icon__label"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={33}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(90) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="start"
        x={-14}
        y={0}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 64,
        "width": 64,
      }
    }
    viewBox="-32 -44 64 64"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={64}
        x={-32}
        y={-43}
      />
      <text
        className="m-vehicle-icon__label"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={-31}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(180) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="hanging"
        textAnchor="middle"
        x={0}
        y={-14}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 68,
        "width": 64,
      }
    }
    viewBox="-32 -22 64 68"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={64}
        x={-32}
        y={21}
      />
      <text
        className="m-vehicle-icon__label"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={33}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(270) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="end"
        x={14}
        y={0}
      >
        X
      </text>
    </g>
  </svg>,
]
`;
